# gorinir-cpp-embedded-serialport

./: .gitignore  CMakeLists.txt  CMakePresets.json  STM32H7A3ZITxQ_FLASH.ld  gorinir-cpp-embedded-serialport.ioc  name-version.txt  pytest.ini  readme.md  stm-cube-script.txt.in
cmake/: vscode.cmake
src/main/c/gorinir/embedded/serialport/: gorinir_embedded_serialport.h
src/main/c/gorinir/embedded/serialport/Core/Inc/: main.h
src/main/c/gorinir/embedded/serialport/Core/Src/: main.c  stm32h7xx_hal_msp.c
src/main/c/gorinir/embedded/serialport/USB_DEVICE/App/: usbd_cdc_if.c
src/main/cpp/: main.cpp
src/main/cpp/gorinir/embedded/serialport/: Application.cpp  Application.hpp  Hardware.cpp  Hardware.hpp  HardwareStub.cpp  IHardware.hpp
src/test/py/: conftest.py  test_serialport.py
src/test/resources/: requirements.txt
